--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "scheduler",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8001",
   "dependencies": {
-    "axios": "^1.3.4",
+    "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.4.4"
+    "react-hooks": "^1.0.1",
+    "react-scripts": "3.4.4",
+    "testing-library": "0.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,7 +19,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public --ci",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "cypress": "cypress open -P ."
   },
   "browserslist": {
     "production": [
@@ -40,6 +44,7 @@
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.7",
     "babel-loader": "8.1.0",
+    "prop-types": "^15.8.1",
     "sass": "^1.53.0"
   },
   "jest": {
